Games & Navbar fixes
1. narrow (<1000px) browser screen has no navbar, reeneabled but map
button does not work at present, need another homepage render/routing
solution

2. Tidied game appearance on place page.  Ideally need aspect ratio
specified for each game time.  Currently on iPhone sliding puzzle
stretches too much

3. Moved config.force_ssl into production.rb & development.rb config
files

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -356,3 +356,8 @@ select {
   }
 }
 
+@media (min-width: 0px) {
+	.profile-icon {
+		display: none;
+	}
+}
