--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -166,19 +166,19 @@
 }
 
 .game-frame {
-  min-width: 650px;
+//  min-width: 650px;
 //	min-height: 400px;
 }
 
 .isotope-game-frame {
-  min-width: 650px;
-	min-height: 400px;
+//  min-width: 650px;
+//	min-height: 400px;
 }
 
 
 #close-large-content
 {
-
+	margin: -20px 0px 0px 0px;
 }
 
 
@@ -224,8 +224,8 @@
 }
 
 .game-divider {
-	overflow: scroll;
-  min-width: 500px;
+//	overflow: scroll;
+//  min-width: 500px;
 }
 
 /*.game-thumbnail {
